# ckanext-iauthenfunctions

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/iauthenfunctions/: cli.py  helpers.py  plugin.py  views.py
ckanext/iauthenfunctions/assets/: script.js  webassets.yml
ckanext/iauthenfunctions/logic/: action.py  auth.py  schema.py  validators.py
ckanext/iauthenfunctions/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/iauthenfunctions/tests/logic/: test_action.py  test_auth.py  test_validators.py
