[metadata]
name = ckanext-iauthenfunctions
version = 0.0.1
description = test create Extensions for CKAN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pcbimon/ckanext-iauthenfunctions
author = Patipat Chewprecha
author_email = patipat.che@mahidol.edu
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = A space separated list of keywords

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             iauthenfunctions = ckanext.iauthenfunctions.plugin:IauthenfunctionsPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/iauthenfunctions/i18n/ckanext-iauthenfunctions.pot
width = 80

[init_catalog]
domain = ckanext-iauthenfunctions
input_file = ckanext/iauthenfunctions/i18n/ckanext-iauthenfunctions.pot
output_dir = ckanext/iauthenfunctions/i18n

[update_catalog]
domain = ckanext-iauthenfunctions
input_file = ckanext/iauthenfunctions/i18n/ckanext-iauthenfunctions.pot
output_dir = ckanext/iauthenfunctions/i18n
previous = true

[compile_catalog]
domain = ckanext-iauthenfunctions
directory = ckanext/iauthenfunctions/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
